src/test/deca/syntax/valid/test_inclusion.deca
#include "include_joueur.decah"

{
    Joueur j = new Joueur();
}
