src/test/deca/syntax/invalid/include_self.deca
#include "include_self.deca"
{
    println("ok");
}